# in-the-game

./: .gitignore  Dockerfile-api.dev  README.md  alembic.ini  docker-compose.yml  pyproject.toml  setup.cfg
docs/: class-diagram.plantuml  model.dbml  openapi.json  schema.yaml
docs/uml/plantuml/: daily-notification-activity-diagram.plantuml  live-notification-activity-diagram.plantuml  weekly-notification-activity-diagram.plantuml
in_the_game/: api.py  broker.py  db.py  worker.py
in_the_game/auth/: __init__.py  bearer.py  db.py  handlers.py  models.py  repository.py  service.py
in_the_game/healthcheck/: __init__.py
in_the_game/notifications/: handlers.py  tasks.py
in_the_game/teams/: __init__.py  db.py  models.py  repository.py  service.py  tasks.py
in_the_game/users/: __init__.py  db.py  models.py  repository.py  service.py
migrations/: env.py
migrations/versions/: 02c7a8510a2a_create_user_and_user_profile_tables.py  212b30d96691_create_teams_table.py  3f56d3789ddf_create_meetings_and_team_meetings_tables.py  4a1dbc6c40ae_create_meeting_events_table.py  b965665757fc_create_subscribed_teams_table.py
tests/: conftest.py  test_auth.py  test_healthcheck.py  test_teams.py  test_users.py
